revision & add custom command to clean docs
